--- a/01_LESSON/css/style.css
+++ b/01_LESSON/css/style.css
@@ -1,4 +1,41 @@
+* {
+    font-family: monospace;
+}
+
+body {
+    font-size: 22px;
+    border: 3px solid black;
+    padding: 5px;
+    padding-top: 0;
+}
+
+h1 {
+    margin-top: 0;
+}
+
+h1, h2 {
+    color: blue;
+}
+
 p {
-    font-size: 64px;
     color: purple;
+}
+
+p {
+    color: red;
+}
+
+p span {
+    text-transform: uppercase;
+    background-color: gold;
+    color: black;
+    color: inherit;
+}
+
+.gray {
+    color: gray;
+}
+
+#second {
+    font-style: italic;
 }
