--- a/01_LESSON/css/style.css
+++ b/01_LESSON/css/style.css
@@ -1,12 +1,14 @@
-* {
-    font-family: monospace;
-}
 
 body {
     font-size: 22px;
     border: 3px solid black;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 1.5;
     padding: 5px;
     padding-top: 0;
+    background: papayawhip;
+    color: black;
+    color: rgb(255,0,0,0.5);
 }
 
 h1 {
@@ -14,15 +16,15 @@ h1 {
 }
 
 h1, h2 {
-    color: blue;
+    color: black;
 }
 
 p {
-    color: purple;
+    /* color: purple; */
 }
 
 p {
-    color: red;
+    /* color: red; */
 }
 
 p span {
@@ -33,7 +35,7 @@ p span {
 }
 
 .gray {
-    color: gray;
+    /* color: gray; */
 }
 
 #second {
