--- a/01_LESSON/css/style.css
+++ b/01_LESSON/css/style.css
@@ -8,7 +8,7 @@ body {
     padding-top: 0;
     background: papayawhip;
     color: black;
-    color: rgb(255,0,0,0.5);
+    color: #333;
 }
 
 h1 {
