--- a/10_LESSON/css/style.css
+++ b/10_LESSON/css/style.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-* {
+/* * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
+} */
 
 body {
     font-size: 2rem;
@@ -15,7 +15,7 @@ body {
 
 /* Block level elements have 100% width and they stack on top of each other  */
 
-
+/* 
 p {
     background-color: lightgray;
 }
@@ -52,4 +52,34 @@ li a {
 
 li a:hover, li a:focus {
     text-decoration: underline;
+} */
+
+.block {
+    width: 30vw;
+    height: 30vw;
+    background-color: lightgreen;
+    padding: 1rem;
+   
+}
+
+.left {
+    float: left;
+    margin-right: 20px;
+}
+
+.right {
+    float: right;
+    margin-right: 20px;
+}
+
+.clear {
+    clear: both;
+}
+
+section {
+    background-color: lightpink;
+    border: 1px solid black;
+    padding: 1rem;
+    /* overflow: auto; */
+    display: flow-root;
 }
