--- a/13_LESSON/css/style.css
+++ b/13_LESSON/css/style.css
@@ -62,3 +62,57 @@ body {
     position: sticky;
     top: 0;
 }
+
+/*////////////////////////////////////////////////*/
+
+html {scroll-behavior: smooth;}
+
+section {
+    height: 100vh;
+}
+
+.blue {
+    background-color: blue;
+}
+.red {
+    background-color: red;
+}
+.green {
+    background-color: green;
+}
+
+header, footer {
+    color: white;
+    text-align: center;
+    height: 100px;
+
+}
+
+header {
+    position: sticky;
+    top: 0;
+    font-size: 5rem;
+}
+
+footer {
+    background-color: black;
+    position: fixed;
+    position: sticky;
+    bottom: 0;
+    font-size: 3rem;
+}
+
+a:visited {
+    color: white;
+}
+
+.social {
+    background-color: royalblue;
+    color: white;
+    font-size: inherit;
+    padding: 1rem;
+    position: fixed;
+    top: 30%;
+    left: 0;
+    z-index: 1;
+}
