--- a/14_FLEXBOX/css/style.css
+++ b/14_FLEXBOX/css/style.css
@@ -32,6 +32,7 @@ body {
     flex-direction: row;
     flex-direction: row-reverse;
 
+    flex-wrap: wrap-reverse;
     flex-wrap: wrap;
 
     flex-flow: row wrap;
@@ -73,4 +74,6 @@ body {
     order: 4;
     order: -1;
     order: 0;
+
+    align-self: flex-end;
 }
