--- a/15_GRID/css/style.css
+++ b/15_GRID/css/style.css
@@ -72,6 +72,7 @@ body {
     background-color: blue;
     grid-column-start: 1;
     grid-column-end: 4;
+    grid-column-end: span 4;
 
     grid-row-start:1;
     grid-row-end:3;
