--- a/18_CARD/css/style.css
+++ b/18_CARD/css/style.css
@@ -123,41 +123,50 @@ footer {
 
 /* || MEDIUM */
 @media screen and (min-width: 768px) {
-  body {
-    background-color: gold;
-    background-image: radial-gradient(whitesmoke, gold);
-  }
+
 }
 
 /* || LARGE */
 @media screen and (min-width: 992px) {
-  body {
-    background-color: firebrick;
-    background-image: radial-gradient(whitesmoke, firebrick);
-  }
+    .card {
+        width: min(100%, 400px);
+    }
+    .figure:nth-child(2) {
+        order: -1;
+    }
 }
 
 /* || XL  */
 @media screen and (min-width: 1200px) {
-  body {
-    background-color: rebeccapurple;
-    background-image: radial-gradient(whitesmoke, rebeccapurple);
-  }
+    .card {
+        width: min(calc(33% - 1rem), 500px);
+    }
+    .figure:nth-child(2) {
+        order: -1;
+    }
 }
 
 /* || MOBILE DEVICE LANDSCAPE  */
 @media screen and (max-height: 425px) and (min-aspect-ratio: 7/4) {
-  body {
-    background-color: dodgerblue;
-    background-image: radial-gradient(whitesmoke, dodgerblue);
-  }
-
-  h1,
-  h2 {
-    font-size: 1.5rem;
-  }
+    h1 {
+        font-size: 1.5rem;
+    }
 
   nav {
     display: none;
+  }
+
+  main {
+      flex-flow: row nowrap;
+      justify-content: space-evenly;
+      align-items: stretch;
+  }
+
+  .card {
+      width: min(calc(33% - 0.25rem), 200px);
+  }
+
+  .card figcaption, .card p {
+      font-size: 1.25rem;
   }
 }
